SERVER-84468 Fix deadlock when running runTransactionOnShardingCatalog() (#17821)

GitOrigin-RevId: 30410c6458fc965ae1277e78a2313e59a4e5d24f